Work-in-progress: save local edits before secret cleanup

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         <div class="container">
             <div class="nav-brand">
                 <div class="logo-container">
-                    <div class="logo-orange-square">
-                        <span class="logo-orange-text">orange</span>
-                    </div>
+                    <img src="logo.svg" alt="Orange Digital Center" class="site-logo">
                     <div class="logo-text">
                         <span class="logo-main">Orange</span>
                         <span class="logo-sub">Digital Center</span>
@@ -118,9 +116,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo-container">
-                        <div class="logo-orange-square">
-                            <span class="logo-orange-text">orange</span>
-                        </div>
+                            <img src="logo.svg" alt="Orange Digital Center" class="site-logo">
                         <div class="logo-text">
                             <span class="logo-main">Orange</span>
                             <span class="logo-sub">Digital Center</span>
