Configuration locale Supabase et améliorations UI - Ajout fichier env-config.js pour dev local - Suppression bouton Startups du header - Ajout navigation smooth vers sections - Mise à jour des chemins de chargement des scripts

--- a/admin/index.html
+++ b/admin/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.38.4/dist/umd/supabase.min.js"></script>
     
     <!-- 2. Variables d'environnement -->
-    <script src="/api/config"></script>
+    <script src="../env-config.js"></script>
     
     <!-- 3. API Supabase -->
     <script src="../config/supabase.js"></script>
