--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    <script src="/api/config"></script>
+    <script src="env-config.js"></script>
     <script src="config/supabase.js"></script>
 </head>
 <body>
@@ -27,7 +27,6 @@
             <nav class="header-nav">
                 <button class="nav-link content-filter-btn active" data-type="all">Tout</button>
                 <button class="nav-link content-filter-btn" data-type="formations">Formations</button>
-                <button class="nav-link content-filter-btn" data-type="startups">Startups</button>
                 <button class="nav-link content-filter-btn" data-type="events">Événements</button>
             </nav>
         </div>
