Update: Ajout des liens réels dans le footer - Liens Google Maps pour tous les ODC (Rabat, Agadir, Ben M'sik, Sidi Maarouf) - Liens réseaux sociaux (Facebook, X/Twitter, LinkedIn, Instagram) - Tous les liens s'ouvrent dans un nouvel onglet

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                 <div class="footer-section">
                     <h4 class="footer-title">Nos ODC</h4>
                     <ul class="footer-links">
-                        <li><a href="#">ODC Rabat</a></li>
-                        <li><a href="#">ODC Agadir</a></li>
-                        <li><a href="#">ODC Club Ben M'sik</a></li>
-                        <li><a href="#">ODC Club Sidi Maarouf</a></li>
+                        <li><a href="https://maps.app.goo.gl/dwXPchG7qjjz89aT8" target="_blank" rel="noopener noreferrer">ODC Rabat</a></li>
+                        <li><a href="https://maps.app.goo.gl/81iUV7wHd18rCka66" target="_blank" rel="noopener noreferrer">ODC Agadir</a></li>
+                        <li><a href="https://maps.app.goo.gl/LweDtD2UGVTVxTVw6" target="_blank" rel="noopener noreferrer">ODC Club Ben M'sik</a></li>
+                        <li><a href="https://maps.app.goo.gl/ZkMNZM4dcLuWaStE9" target="_blank" rel="noopener noreferrer">ODC Club Sidi Maarouf</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -120,10 +120,10 @@
                 <div class="footer-section">
                     <h4 class="footer-title">Suivez-nous</h4>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/ODCMaroc/?locale=fr_FR" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="https://x.com/OrangeMaroc" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
+                        <a href="https://ma.linkedin.com/company/orange-maroc" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/orangemaroc/?hl=fr" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
