--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="footer-section">
                     <h4 class="footer-title">Contact</h4>
-                    <p><i class="fas fa-envelope"></i> contact@orangedigitalcenter.ma</p>
+                    <p><i class="fas fa-envelope"></i> orangedigitalcenter@orange.ma</p>
                 </div>
                 <div class="footer-section">
                     <h4 class="footer-title">Suivez-nous</h4>
