--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/svg+xml" href="logo.svg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script>
         // Charger la config selon l'environnement
@@ -121,7 +121,7 @@
                     <h4 class="footer-title">Suivez-nous</h4>
                     <div class="social-links">
                         <a href="https://www.facebook.com/ODCMaroc/?locale=fr_FR" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="https://x.com/OrangeMaroc" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="X (Twitter)"><i class="fab fa-twitter"></i></a>
+                        <a href="https://x.com/OrangeMaroc" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
                         <a href="https://ma.linkedin.com/company/orange-maroc" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         <a href="https://www.instagram.com/orangemaroc/?hl=fr" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
